--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
       href="https://www.iconpacks.net/icons/2/free-location-map-icon-2956-thumb.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
