--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
       href="https://www.iconpacks.net/icons/2/free-location-map-icon-2956-thumb.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
-    />
+    /> -->
     <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
